working with local broker

--- a/mosquito.conf
+++ b/mosquito.conf
@@ -1,4 +1,19 @@
 log_type all
+log_type debug
+log_type error
+log_type warning
+log_type notice
+log_type information
+log_type subscribe
+log_type unsubscribe
+log_type websockets
 
-#allow_anonymous false
-#require_certificate false
+allow_anonymous true
+
+# We must specify which port to use for each protocol
+# https://github.com/mqttjs/MQTT.js/issues/1021#issuecomment-596039211
+listener 8884
+protocol mqtt
+
+listener 8883
+protocol websockets 
